--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,13 +28,15 @@ div {
     padding: 20px;
 }
 
-p {
+input {
     font-size: 50px;
     grid-column: 1 / -1;
     grid-row: 1 / 3;
-    display: grid;
-    justify-content: end;
-    align-items: end;
+    background: #17181A;
+    border: none;
+    outline: none;
+    text-align: right;
+    padding-top: 40px;
 }
 
 button {
