--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,81 +1,157 @@
 @charset "UTF-8";
 
 * {
-    padding: 0px;
-    margin: 0px;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-}
+    margin: 0;
+    padding: 0;
+  }
+  
+  :root {
+    --bg-color: #212529;
+    --border-color: #666;
+    --font-color: #f1f5f9;
+    --primary-color: #4dff91;
+    --error-color: #ff0043;
+  }
+  
+  body {
+    background-color: var(--bg-color);
+    color: var(--font-color);
+    font-family: "Ubuntu", sans-serif;
+  }
+  
+  main {
+    margin: 0 auto;
+    max-width: 27rem;
+    padding: 0 1.5rem 2.5rem;
+    position: relative;
+    border: 2px solid var(--border-color);
+    border-radius: 1rem;
+    margin-top: 2rem;
+  }
+  
+  header {
+    padding: 2rem 0;
+  }
 
-body {
-    background-color: #DAF0FF;
-    height: 100vh;
-    width: 100vw;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-}
-
-div {
-    background: linear-gradient(191.34deg, #17181A -4.95%, #17181A 103.75%);
-    border-radius: 39px;
-    width: 375px;
-    height: 568px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(7, 1fr);
-    padding: 20px;
-}
-
-input {
-    font-size: 50px;
-    grid-column: 1 / -1;
-    grid-row: 1 / 3;
-    background: #17181A;
-    border: none;
-    outline: none;
-    text-align: right;
-    padding-top: 40px;
-}
-
-button {
-    font-size: 25px;
-    border-radius: 15px;
-    border: none;
-    margin: 10px;
+  header > h1 {
+    font-variant: small-caps;
+    font-size: 40px;
+  }
+  
+  #themeSwitcher {
+    background-color: var(--bg-color);
+    border: .125rem solid var(--font-color);
+    color: var(--font-color);
     cursor: pointer;
-}
+    transition: .3s;
+  }
+  
+  #themeSwitcher:hover {
+    background-color: var(--font-color);
+    color: var(--bg-color);
+  }
+  
+  #themeSwitcher:active {
+    opacity: 0.5;
+  }
+  
 
-button:hover {
-    opacity: 0.8;
-}
+  button {
+    background-color: var(--primary-color);
+    border: none;
+    border-radius: .25rem;
+    font-weight: 700;
+    padding: .5rem 1rem;
+    transition: .15s;
+  }
+  
+  input {
+    background-color: var(--bg-color);
+    border: 2px solid var(--border-color);
+    border-radius: .5rem;
+    color: var(--font-color);
+    display: block;
+    font-size: 1.75rem;
+    margin: 0 auto;
+    padding: 1rem;
+    text-align: end;
+    width: 100%;
+  }
+  
+  #keys {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 1rem;
+    margin: 2rem 0;
+  }
+  
+  #keys button {
+    color: var(--bg-color);
+    cursor: pointer;
+    font-size: 1.5rem;
+    padding: 1rem;
+  }
+  
+  #keys button:hover {
+    filter: brightness(0.8);
+  }
 
-button:active {
-    opacity: 0.6;
-}
+  #keys button:active {
+    filter: brightness(0.5);
+  }
+  
+  #result {
+    border-width: 2px 2px 2px 0;
+    border-radius: 0 .5rem .5rem 0;
+  }
+  
+  #copyToClipboard {
+    background-color: transparent;
+    border: solid var(--border-color);
+    border-width: 2px;
+    border-radius: .5rem 0 0 .5rem;
+    color: var(--font-color);
+    cursor: pointer;
+    display: block;
+    height: 4.25rem;
+    width: 6rem;
+  }
 
-.black-button {
-    background: #303136;
-}
+  footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-.blue-button {
-    background: #005db2;
-}
+  #copy {
+    margin-top: 10px;
+  }
 
-.equal-button {
-    background: #1991ff;
-}
+  #copy a {
+    font-weight: bold;
+    color: var(--primary-color);
+    text-decoration: none;
+  }
 
-.gray-button {
-    background: #616161;
-}
-
-.zero {
-    grid-column: 1 / 3;
-}
-
-.equal {
-    grid-row: 6 / 8;
-    grid-column: 4 / 5;
-}
+  .flex {
+    display: flex;
+  }
+  
+  .align-center {
+    align-items: center;
+  }
+  
+  .justify-between {
+    justify-content: space-between;
+  }
+  
+  .error {
+    background-color: var(--error-color);
+    
+  }
+  
+  .success {
+    border-color: var(--primary-color) !important;
+    color: var(--primary-color) !important;
+  }
